first complete merge